package.json: jshint; whitelist certain domains for 'api' calls; protytype working; TODO: DEBUG mysql

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wohngeld",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/server.js"
@@ -21,6 +21,7 @@
   "devDependencies": {
     "autoprefixer": "^7.2.2",
     "jest": "^21.2.1",
+    "jshint": "^2.9.5",
     "nodemon": "^1.12.5"
   }
 }
